--- a/start.css
+++ b/start.css
@@ -5,7 +5,7 @@ height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: 100%;
 }
 h1 {
 	font-size:3rem;
